--- a/2_3/css/styles.css
+++ b/2_3/css/styles.css
@@ -6,6 +6,22 @@
 
 .container {
     width: 90%;
+    height: 100vh;
     max-width: 900px;
     margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.counter-container{
+    display: flex;
+    flex-direction: column;
+}
+
+.counter{
+    font-size: 40px;
+    font-weight: bold;
+    color: blue;
+    text-align: center;
 }
