--- a/2_3/css/styles.css
+++ b/2_3/css/styles.css
@@ -17,6 +17,7 @@
 .counter-container{
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 .counter{
@@ -25,3 +26,8 @@
     color: blue;
     text-align: center;
 }
+
+.btn{
+    width: 100px;
+}
+
